--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,10 +15,149 @@
   --color-3: #ddf000;
 
   /* initial font size */
-  font-size: 10rem;
+  font-size: 10px;
 }
 
 body {
+  max-width: 1440px;
   width: 100%;
   font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
+}
+
+ul li {
+  list-style: none;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+/* navbar style */
+.navbar {
+  height: 80px;
+  width: 100%;
+  padding: 20px 128px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+
+  & .navbar-left {
+    display: flex;
+    flex-direction: row;
+    gap: 60px;
+
+    & .navbar-logo {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      font-size: 1.8rem;
+      font-weight: bold;
+      line-height: 65px;
+    }
+
+    & .navbar-link {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 25px;
+      font-size: 1.4rem;
+      line-height: 65px;
+
+      & li a {
+        cursor: pointer;
+        transition: color, font-weight 0.6s ease;
+      }
+
+      & li a:hover {
+        color: var(--color-1);
+        font-weight: 600;
+      }
+    }
+  }
+
+  & .navbar-cta {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+
+    & .button-sign-in {
+      background-color: #ffff;
+      border: none;
+      line-height: 20px;
+      padding: 10px 0;
+      font-size: 1.4rem;
+      border-radius: 30px;
+    }
+
+    & .button-get-started {
+      background-color: var(--color-1);
+      padding: 10px 20px;
+      border-radius: 30px;
+      border: none;
+      font-size: 1.4rem;
+      font-weight: bold;
+    }
+  }
+
+  /* navbar open icon */
+  & .navbar-open,
+  & .navbar-close {
+    display: none;
+    & i {
+      font-size: 2rem;
+      cursor: pointer;
+    }
+  }
+}
+
+/* responsive layout */
+@media screen and (max-width: 1200px) {
+  .navbar {
+    & .navbar-left {
+      & .navbar-link {
+        position: absolute;
+        top: 0px;
+        left: -100%;
+        line-height: normal;
+        flex-direction: column;
+        align-items: start;
+        background-color: #ddf000;
+        padding: 80px 40px;
+        height: 100vh;
+        max-width: 268px;
+        width: 100%;
+        transition: 0.5s ease-in-out;
+      }
+    }
+
+    & .navbar-cta {
+      position: absolute;
+      top: 200px;
+      left: -100%;
+      line-height: normal;
+      padding: 80px 40px;
+      flex-direction: column;
+      transition: 0.5s ease-in-out;
+    }
+
+    &.openNav .navbar-cta,
+    &.openNav .navbar-link {
+      left: 0;
+    }
+
+    & .navbar-open,
+    & .navbar-close {
+      display: block;
+    }
+
+    & .hide {
+      display: none;
+    }
+  }
 }
