--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,7 +19,7 @@
 }
 
 body {
-  max-width: 1440px;
+  /* max-width: 1440px; */
   width: 100%;
   font-family: "Montserrat", sans-serif;
   scroll-behavior: smooth;
@@ -34,8 +34,33 @@ a {
   text-decoration: none;
 }
 
+/* button */
+.button-primary {
+  background-color: var(--color-1);
+  padding: 10px 20px;
+  border-radius: 30px;
+  border: none;
+  font-size: 1.4rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button-secondary {
+  background-color: #ffff;
+  border: none;
+  line-height: 20px;
+  padding: 10px 0;
+  font-size: 1.4rem;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
 /* navbar style */
 .navbar {
+  position: fixed;
+  top: 0;
+  z-index: 999;
+
   height: 80px;
   width: 100%;
   padding: 20px 128px;
@@ -45,6 +70,7 @@ a {
   justify-content: space-between;
   align-items: center;
 
+  background-color: #ffff;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
 
   & .navbar-left {
@@ -86,22 +112,15 @@ a {
     flex-direction: row;
     gap: 30px;
 
-    & .button-sign-in {
-      background-color: #ffff;
-      border: none;
-      line-height: 20px;
-      padding: 10px 0;
-      font-size: 1.4rem;
-      border-radius: 30px;
+    & .button-secondary {
+      /* background-color: #ff0000; */
+      width: auto;
+      max-width: auto;
     }
 
-    & .button-get-started {
-      background-color: var(--color-1);
-      padding: 10px 20px;
-      border-radius: 30px;
-      border: none;
-      font-size: 1.4rem;
-      font-weight: bold;
+    & .button-primary {
+      width: auto;
+      max-width: auto;
     }
   }
 
@@ -116,9 +135,59 @@ a {
   }
 }
 
+/* hero style */
+.hero {
+  width: 100%;
+  padding: 130px 128px 70px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  & .hero-left {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    justify-content: center;
+
+    & .text-heading {
+      font-size: 6rem;
+      font-weight: bold;
+      line-height: 80px;
+    }
+
+    & .text-description {
+      font-size: 1.4rem;
+      line-height: 20px;
+      color: #555555;
+      letter-spacing: 0.2rem;
+      margin-top: 20px;
+    }
+
+    & .hero-cta {
+      display: flex;
+      flex-direction: row;
+      gap: 18px;
+      margin-top: 10px;
+
+      & .button-secondary {
+        border: 1px solid black;
+        padding: 10px 20px;
+      }
+    }
+  }
+
+  & .hero-right {
+    & .hero-image {
+      width: 540px;
+      height: 495px;
+    }
+  }
+}
+
 /* responsive layout */
 @media screen and (max-width: 1200px) {
   .navbar {
+    padding: 20px 50px;
     & .navbar-left {
       & .navbar-link {
         position: absolute;
@@ -158,6 +227,56 @@ a {
 
     & .hide {
       display: none;
+    }
+  }
+
+  .hero {
+    padding: 130px 50px 70px;
+
+    & .hero-left {
+      & .text-heading {
+        font-size: 4rem;
+        line-height: 60px;
+      }
+    }
+
+    & .hero-right {
+      & .hero-image {
+        width: 440px;
+        height: 395px;
+      }
+    }
+  }
+}
+
+/* tablet screen */
+@media screen and (max-width: 768px) {
+  .hero {
+    flex-direction: column;
+    gap: 20px;
+    padding: 130px 50px 70px;
+
+    & .hero-left {
+      align-items: center;
+      text-align: center;
+      & .text-heading {
+        font-size: 3rem;
+        line-height: 40px;
+      }
+
+      & .text-description {
+        font-size: 1.2rem;
+      }
+    }
+
+    & .hero-right {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      & .hero-image {
+        width: 340px;
+        height: 295px;
+      }
     }
   }
 }
