--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -188,6 +188,68 @@ a {
   }
 }
 
+/* feature style */
+.feature {
+  width: 100%;
+  padding: 0 128px 30px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  align-items: center;
+  text-align: center;
+
+  & .feature-title {
+    font-size: 5.2rem;
+    font-weight: 400;
+  }
+
+  & .feature-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    grid-template-areas: "card1 card2 card3";
+    gap: 15px;
+
+    & .card {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      background-color: var(--color-2);
+      border-radius: 25px;
+      padding: 30px 25px 0px;
+      width: 100%;
+      max-width: 385px;
+      box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+      & .card-title {
+        font-size: 2.4rem;
+        font-weight: 600;
+      }
+
+      & .card-description {
+        font-size: 1.4rem;
+      }
+
+      & .card-image {
+        width: 332px;
+        height: 391px;
+        border-radius: 50px 50px 0 0;
+      }
+    }
+
+    & .card:nth-child(1) {
+      grid-area: card1;
+    }
+
+    & .card:nth-child(2) {
+      grid-area: card2;
+    }
+
+    & .card:nth-child(3) {
+      grid-area: card3;
+    }
+  }
+}
 /* responsive layout */
 @media screen and (max-width: 1200px) {
   .navbar {
@@ -251,6 +313,24 @@ a {
       }
     }
   }
+
+  .feature {
+    padding: 0 50px 30px;
+
+    & .feature-grid {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: auto auto;
+      grid-template-areas:
+        "card1 card2"
+        "card3 card3";
+      gap: 50px;
+
+      & .card:nth-child(3) {
+        /* margin: auto; */
+        justify-self: center;
+      }
+    }
+  }
 }
 
 /* tablet screen */
@@ -281,6 +361,52 @@ a {
         width: 340px;
         height: 295px;
       }
+    }
+  }
+
+  .feature {
+    & .feature-title {
+      font-size: 3rem;
+    }
+
+    & .feature-grid {
+      gap: 10px;
+      & .card {
+        gap: 10px;
+        max-width: 300px;
+        align-items: center;
+        & .card-title {
+          font-size: 1.5rem;
+        }
+
+        & .card-description {
+          font-size: 1.2rem;
+        }
+
+        & .card-image {
+          width: 232px;
+          height: 291px;
+          border-radius: 0;
+        }
+      }
+    }
+  }
+}
+
+/* mobile screen */
+@media screen and (max-width: 576px) {
+  .feature {
+    & .feature-title {
+      font-size: 2rem;
+    }
+
+    & .feature-grid {
+      grid-template-columns: 1fr;
+      grid-template-areas:
+        "card1"
+        "card2"
+        "card3";
+      gap: 40px;
     }
   }
 }
