--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -304,6 +304,68 @@ a {
   }
 }
 
+/* product style */
+.product {
+  width: 100%;
+  padding: 50px 128px;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+
+  & .product-title {
+    font-size: 5.2rem;
+    font-weight: 500;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+  }
+
+  & .product-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "product1 product2 product3";
+    gap: 15px;
+
+    & .product-card {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      background-color: var(--color-2);
+      border-radius: 15px;
+      padding: 15px 20px;
+      box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.1);
+
+      & .product-card-image {
+        width: 50px;
+        height: 40px;
+      }
+
+      & .product-card-title {
+        font-size: 1.8rem;
+        font-weight: 500;
+      }
+
+      & .product-card-description {
+        font-size: 1.4rem;
+        line-height: 2.5rem;
+      }
+    }
+
+    & .product-card:nth-child(1) {
+      grid-area: product1;
+    }
+
+    & .product-card:nth-child(2) {
+      grid-area: product2;
+    }
+
+    & .product-card:nth-child(3) {
+      grid-area: product3;
+    }
+  }
+}
+
 /* footer style */
 .footer {
   background-color: #16171c;
@@ -588,6 +650,24 @@ a {
           font-weight: bold;
         }
       }
+    }
+  }
+
+  .product {
+    padding: 50px 50px;
+    gap: 30px;
+
+    & .product-title {
+      font-size: 3rem;
+    }
+
+    & .product-grid {
+      grid-template-columns: 1fr;
+      grid-template-areas:
+        "product1"
+        "product2"
+        "product3";
+      gap: 30px;
     }
   }
 }
